# emeta

./: Cargo.toml  README.md
docs/: config.rs
src/: api.rs  cli.rs  lib.rs  main.rs  meta.rs  utils.rs
src/api/: anilist.rs  bilibili.rs  danbooru.rs  dlsite.rs  fs.rs  imdb.rs  mangadex.rs  novelupdate.rs  youtube.rs
src/api/anilist/: media.rs  medialist.rs  mut_list.gql  mutation.rs  query_fd.gql  query_ls.gql  query_medialist.gql  vi.rs
src/api/bilibili/: video.rs
src/api/mangadex/: consts.rs  group.rs  meta.rs
src/lib/: import.rs  meta.rs  tags.rs
src/meta/: anime.rs  date.rs  format.rs  manga.rs  progress.rs  score.rs  site.rs  status.rs  tag.rs  title.rs  types.rs  user.rs
tests/bilibili/: video.json  video.rs
